@@ -395,6 +395,17 @@
     <string name="elem_D_FF_AS_pin_Set">asynchrones Setzen. Eine Eins an diesem Eingang setzt alle gespeicherten Bits auf Eins.</string>
     <string name="elem_D_FF_AS_pin_Clr">asynchrones Löschen. Eine Eins an diesem Eingang setzt alle gespeicherten Bits auf Null.</string>
 
+    <string name="elem_Monoflop">Monoflop</string>
+    <string name="elem_Monoflop_short">Mono</string>
+    <string name="elem_Monoflop_tt">Ein Monoflop wird bei einer steigenden Flanke am Takteingang gesetzt.
+        Nach einer einstellbaren Verzögerungszeit wird das Monoflop automatisch wieder gelöscht.
+        Das Monoflop ist retriggerbar. Es kann nur genutzt werden, wenn es genau ein Taktelement in der Schaltung gibt.
+    </string>
+    <string name="elem_Monoflop_pin_R">Reset Eingang. Eine Eins setzt das Monoflop auf Null zurück.</string>
+    <string name="elem_Monoflop_pin_C">Eine steigende Flanke an diesem Eingang setzt das Monoflop. Der Ausgang Q wird auf
+        Eins gesetzt. Nach Ablauf der Verzögerungszeit fällt Q wieder auf Null zurück.</string>
+    <string name="elem_Monoflop_pin_Q">Ausgang des Monoflops</string>
+    <string name="elem_Monoflop_pin_~Q">Invertierter Ausgang</string>
 
     <!-- Speicher -->
 
@@ -823,6 +834,7 @@ Sind evtl. die Namen der Variablen nicht eindeutig?</string>
     <string name="err_circuitHasCycles">Die Schaltung enthält Zyklen und kann daher nicht analysiert werden.
         Zyklen entstehen, wenn ein Ausgang eines Gatters auf einen der Eingänge des selben Gatters zurück geführt wird.
         Die Verwendung von Schaltern, FETs oder Relais verursacht ebenfalls Zyklen.</string>
+    <string name="err_monoflopRequiresOneClock">Wird ein Monoflop verwendet, muss es genau ein Taktelement geben!</string>
 
     <string name="key_AddrBits">Adress-Bits</string><!-- ROM, RAMDualPort, RAMSinglePort, RAMSinglePortSel, EEPROM -->
     <string name="key_AddrBits_tt">Anzahl der Adress-Bits, die verwendet werden.</string>
@@ -1015,6 +1027,8 @@ Sind evtl. die Namen der Variablen nicht eindeutig?</string>
     <string name="key_delayTime_tt">Dauer der Verzögerung in Gatterlaufzeiten.</string>
     <string name="key_invertOutput">invertierter Ausgang</string>
     <string name="key_invertOutput_tt">Wenn gesetzt, wird der Ausgang invertiert.</string>
+    <string name="key_timerDelay">Impulsdauer</string>
+    <string name="key_timerDelay_tt">Die Impulsdauer wird in Taktzyklen angegeben.</string>
 
     <string name="mod_insertWire">Leitung eingefügt.</string>
     <string name="mod_insertCopied">Aus Zwischenablage eingefügt.</string>
