@@ -2,7 +2,8 @@ Release Notes
 
 HEAD, planed as v0.18
 - Added ICs 74181, 74779, 7440 and 7428
-- Added a simple bidirectional splitter
+- Added a simple bidirectional splitter.
+- Added a monoflop.
 - Added new text formatting engine which supports overline, super- and subscript.
   Try "~Q_{n+1}^1" as an output label.
 - It's possible to test circuits with a high-z input which can act as an output.
